[metadata]
name = hippocampus_content_neurofeedback
version = 0.1.0.dev0
author = Michael Coulter
author_email = michael.e.coulter@gmail.com
description = Analysis for rat hipopcampus neurofeedback in Loren Frank Lab, UCSF
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/LorenFrankLab/hippocampus_content_neurofeedback

[flake8]
max-line-length = 120
max-complexity = 17
exclude =
  .git,
  .tox,
  __pycache__